satya code for payment and reusable components

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Test_Execution" class="navigator-link">
-              <span class="suite-name border-passed">Test Execution</span>
+              <span class="suite-name border-failed">Test Execution</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Test_Execution" class="navigator-link ">
-                    <span>C:\Users\pawasthi008\Documents\Automation\DemoAutomation\TestAutomation_DemoInstance\src\test\resources\testngrunners\testng.xml</span>
+                    <span>C:\PwCUIDemo\DemoInstanceAutomation\src\test\resources\testngrunners\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Test_Execution" class="hide-methods passed suite-Test_Execution"> (hide)</a> <!-- hide-methods passed suite-Test_Execution -->
-                      <a href="#" panel-name="suite-Test_Execution" class="show-methods passed suite-Test_Execution"> (show)</a> <!-- show-methods passed suite-Test_Execution -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Test_Execution" class="hide-methods failed suite-Test_Execution"> (hide)</a> <!-- hide-methods failed suite-Test_Execution -->
+                      <a href="#" panel-name="suite-Test_Execution" class="show-methods failed suite-Test_Execution"> (show)</a> <!-- show-methods failed suite-Test_Execution -->
                     </span>
-                    <div class="method-list-content passed suite-Test_Execution">
+                    <div class="method-list-content failed suite-Test_Execution">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Test_Execution" title="demo.tests.scp.paymentInfoTests" class="method navigator-link" hash-for-method="makePaymentwithExistingCreditCard">makePaymentwithExistingCreditCard</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_Execution" title="demo.tests.scp.paymentInfoTests" class="method navigator-link" hash-for-method="verifyBankPaymentFormFieldsValidation">verifyBankPaymentFormFieldsValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Test_Execution -->
+                    </div> <!-- method-list-content failed suite-Test_Execution -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,27 +118,70 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Test_Execution" class="panel Test_Execution">
-          <div class="suite-Test_Execution-class-passed">
+          <div class="suite-Test_Execution-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">demo.tests.scp.paymentInfoTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="makePaymentwithExistingCreditCard">
-                  </a> <!-- makePaymentwithExistingCreditCard -->
-                  <span class="method-name">makePaymentwithExistingCreditCard</span>
+                  <a name="verifyBankPaymentFormFieldsValidation">
+                  </a> <!-- verifyBankPaymentFormFieldsValidation -->
+                  <span class="method-name">verifyBankPaymentFormFieldsValidation</span>
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for element to be clickable: Proxy element for: DefaultElementLocator &apos;By.cssSelector: .texttopay_ico a&apos; (tried for 120 second(s) with 500 milliseconds interval)
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:230)
+	at sew.ai.driver.Page.waitForElementToBeClickable(Page.java:234)
+	at sew.ai.driver.Page.click(Page.java:59)
+	at sew.ai.pageObjects.scp.HomePage.clickTextToPayLink(HomePage.java:386)
+	at sew.ai.steps.scp.HomeSteps.navigateToTextToPay(HomeSteps.java:208)
+	at demo.steps.scp.PaymentInformationSteps.verifyTheBankPaymentFormFieldValidation(PaymentInformationSteps.java:259)
+	at demo.tests.scp.paymentInfoTests.verifyBankPaymentFormFieldsValidation(paymentInfoTests.java:102)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;.texttopay_ico a&quot;}
+  (Session info: chrome=120.0.6099.201)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.3&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [8b89b708300c708cc7470490c49256d3, findElement {using=css selector, value=.texttopay_ico a}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.201, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\WINDOWS\SystemTemp\scope...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53596}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53596/devtoo..., se:cdpVersion: 120.0.6099.201, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 8b89b708300c708cc7470490c49256d3
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
+	at jdk.proxy2/jdk.proxy2.$Proxy39.isDisplayed(Unknown Source)
+	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:304)
+	at org.openqa.selenium.support.ui.ExpectedConditions.access$000(ExpectedConditions.java:37)
+	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:290)
+	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:287)
+	at org.openqa.selenium.support.ui.ExpectedConditions$23.apply(ExpectedConditions.java:656)
+	at org.openqa.selenium.support.ui.ExpectedConditions$23.apply(ExpectedConditions.java:652)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:205)
+	... 34 more
+... Removed 32 stack frames
+</div> <!-- stack-trace -->
                   <em>
-(To perform payement with existing CC)                  </em>
+(validation on bank payment form)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Test_Execution-class-passed -->
+          </div> <!-- suite-Test_Execution-class-failed -->
         </div> <!-- panel Test_Execution -->
         <div panel-name="test-xml-Test_Execution" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pawasthi008\Documents\Automation\DemoAutomation\TestAutomation_DemoInstance\src\test\resources\testngrunners\testng.xml</span>
+            <span class="header-content">C:\PwCUIDemo\DemoInstanceAutomation\src\test\resources\testngrunners\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,14 +241,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'makePaymentwithExistingCreditCard')
+data.setCell(0, 1, 'verifyBankPaymentFormFieldsValidation')
 data.setCell(0, 2, 'demo.tests.scp.paymentInfoTests')
-data.setCell(0, 3, 380823);
+data.setCell(0, 3, 184130);
 window.suiteTableData['Test_Execution']= { tableData: data, tableDiv: 'times-div-Test_Execution'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 minutes</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Test_Execution">
               </div> <!-- times-div-Test_Execution -->
             </div> <!-- times-div -->
@@ -232,25 +275,31 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">demo.tests.scp.paymentInfoTests</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">testPreRequisites(web, chrome)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">classPreRequisites(web, chrome, null)</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">1094 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">methodsPreRequisites(web, chrome, scp, null)</span>
-                <span class="method-start">35 ms</span>
+                <span class="method-start">1109 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">makePaymentwithExistingCreditCard</span>
-                <span class="method-start">50004 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">verifyBankPaymentFormFieldsValidation</span>
+                <span class="method-start">22920 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDownMethods</span>
-                <span class="method-start">430837 ms</span>
+                <span class="method-name">tearDownMethods([TestResult name=verifyBankPaymentFormFieldsValidation status=FAILURE method=paymentInfoTests.verify...)</span>
+                <span class="method-start">207246 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClasses</span>
-                <span class="method-start">451064 ms</span>
+                <span class="method-start">208618 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
