--- a/test-output/old/Test Execution/classes.html
+++ b/test-output/old/Test Execution/classes.html
@@ -11,7 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyBankPaymentFormFieldsValidation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBankPaymentFormFields</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>accPaymentInformation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPaymentInformationPageObjects</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
