--- a/test-output/old/Test Execution/methods-alphabetical.html
+++ b/test-output/old/Test Execution/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Execution</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99b8e7">  <td>24/01/09 18:35:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3918c187]">&gt;&gt;classPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@532297836</td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>24/01/09 18:36:43</td>   <td>49984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paymentInfoTests.makePaymentwithExistingCreditCard()[pri:1, instance:demo.tests.scp.paymentInfoTests@3918c187]">makePaymentwithExistingCreditCard</td> 
-  <td>main@532297836</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>24/01/09 18:35:53</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3918c187]">&gt;&gt;methodsPreRequisites</td> 
-<td>&nbsp;</td>  <td>main@532297836</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>24/01/09 18:43:24</td>   <td>451055</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClasses()[pri:0, instance:demo.tests.scp.paymentInfoTests@3918c187]">&lt;&lt;tearDownClasses</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@532297836</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>24/01/09 18:43:04</td>   <td>430819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods()[pri:0, instance:demo.tests.scp.paymentInfoTests@3918c187]">&lt;&lt;tearDownMethods</td> 
-<td>&nbsp;</td>  <td>main@532297836</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>24/01/10 17:07:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>24/01/10 17:07:49</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>24/01/10 17:11:16</td>   <td>207523</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClasses()[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&lt;&lt;tearDownClasses</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>24/01/10 17:11:15</td>   <td>206167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&lt;&lt;tearDownMethods</td> 
+<td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="dac5ef">  <td>24/01/10 17:07:47</td>   <td>-1077</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;testPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>24/01/10 17:08:10</td>   <td>21825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paymentInfoTests.verifyBankPaymentFormFieldsValidation()[pri:3, instance:demo.tests.scp.paymentInfoTests@3d484181]">verifyBankPaymentFormFieldsValidation</td> 
+  <td>main@653345773</td>   <td></td> </tr>
 </table>
