--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,51 +9,62 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Test Execution</th></tr>
-<tr><td><a href="#t0">E2E Test Suite On Web - Chrome</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">208,628</td><td></td><td></td></tr>
+<tr><td><a href="#t0">E2E Test Suite On Web - Chrome</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">99,340</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test Execution</th></tr></tbody><tbody id="t0"><tr><th colspan="4">E2E Test Suite On Web - Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">demo.tests.scp.paymentInfoTests</td><td><a href="#m0">verifyBankPaymentFormFieldsValidation</a></td><td rowspan="1">1704886690857</td><td rowspan="1">184130</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test Execution</th></tr></tbody><tbody id="t0"><tr><th colspan="4">E2E Test Suite On Web - Chrome &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">demo.tests.scp.PaymentInfoTests</td><td><a href="#m0">methodsPreRequisites</a></td><td rowspan="1">1705654801108</td><td rowspan="1">74486</td></tr><tr><th colspan="4">E2E Test Suite On Web - Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">demo.tests.scp.PaymentInfoTests</td><td><a href="#m1">verifyBankPaymentFormFieldsValidation</a></td><td rowspan="1">1705654800630</td><td rowspan="1">77436</td></tr><tr><th colspan="4">E2E Test Suite On Web - Chrome &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">demo.tests.scp.PaymentInfoTests</td><td><a href="#m2">tearDownClasses</a></td><td rowspan="1">1705654878076</td><td rowspan="1">0</td></tr><tr><th colspan="4">E2E Test Suite On Web - Chrome &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">demo.tests.scp.PaymentInfoTests</td><td><a href="#m3">verifyBankPaymentFormFieldsValidation</a></td><td rowspan="1">1705654875604</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>E2E Test Suite On Web - Chrome</h2><h3 id="m0">demo.tests.scp.paymentInfoTests#verifyBankPaymentFormFieldsValidation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for element to be clickable: Proxy element for: DefaultElementLocator &apos;By.cssSelector: .texttopay_ico a&apos; (tried for 120 second(s) with 500 milliseconds interval)
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:230)
-	at sew.ai.driver.Page.waitForElementToBeClickable(Page.java:234)
-	at sew.ai.driver.Page.click(Page.java:59)
-	at sew.ai.pageObjects.scp.HomePage.clickTextToPayLink(HomePage.java:386)
-	at sew.ai.steps.scp.HomeSteps.navigateToTextToPay(HomeSteps.java:208)
-	at demo.steps.scp.PaymentInformationSteps.verifyTheBankPaymentFormFieldValidation(PaymentInformationSteps.java:259)
-	at demo.tests.scp.paymentInfoTests.verifyBankPaymentFormFieldsValidation(paymentInfoTests.java:102)
+<h2>E2E Test Suite On Web - Chrome</h2><h3 id="m0">demo.tests.scp.PaymentInfoTests#methodsPreRequisites</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>web</td><td>chrome</td><td>scp</td><td>null</td></tr><tr><th colspan="4">Exception</th></tr><tr><td colspan="4"><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
+Host info: host: &apos;USZ78MBH3R&apos;, ip: &apos;192.168.29.240&apos;
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
+	at org.openqa.selenium.remote.RemoteWebDriver.startSession(RemoteWebDriver.java:236)
+	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:163)
+	at org.openqa.selenium.chromium.ChromiumDriver.&lt;init&gt;(ChromiumDriver.java:108)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:88)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:83)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:72)
+	at sew.ai.driver.WebDriverFactory.createChromeDriver(WebDriverFactory.java:173)
+	at sew.ai.driver.WebDriverFactory.instantiateWebDriver(WebDriverFactory.java:52)
+	at sew.ai.driver.DriverFactory.getWebDriver(DriverFactory.java:26)
+	at sew.ai.runner.TestRunner.methodsPreRequisites(TestRunner.java:76)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;.texttopay_ico a&quot;}
-  (Session info: chrome=120.0.6099.201)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Caused by: org.openqa.selenium.WebDriverException: Timed out waiting for driver process to start.
 Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.3&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [8b89b708300c708cc7470490c49256d3, findElement {using=css selector, value=.texttopay_ico a}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 120.0.6099.201, chrome: {chromedriverVersion: 120.0.6099.109 (3419140ab66..., userDataDir: C:\WINDOWS\SystemTemp\scope...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53596}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:53596/devtoo..., se:cdpVersion: 120.0.6099.201, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 8b89b708300c708cc7470490c49256d3
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
+Driver info: driver.version: ChromeDriver
+	at org.openqa.selenium.remote.service.DriverService.start(DriverService.java:209)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:119)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at jdk.proxy2/jdk.proxy2.$Proxy39.isDisplayed(Unknown Source)
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:304)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$000(ExpectedConditions.java:37)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:290)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:287)
-	at org.openqa.selenium.support.ui.ExpectedConditions$23.apply(ExpectedConditions.java:656)
-	at org.openqa.selenium.support.ui.ExpectedConditions$23.apply(ExpectedConditions.java:652)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:205)
-	... 34 more
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	... 42 more
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">demo.tests.scp.PaymentInfoTests#verifyBankPaymentFormFieldsValidation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.TakesScreenshot.getScreenshotAs(org.openqa.selenium.OutputType)&quot; because &quot;sew.ai.runner.TestRunner.driver&quot; is null
+	at sew.ai.utils.ScreenshotUtils.getBase64Image(ScreenshotUtils.java:16)
+	at sew.ai.helpers.reporters.ExtentLogger.skip(ExtentLogger.java:51)
+	at sew.ai.helpers.listeners.TestListeners.onTestSkipped(TestListeners.java:77)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">demo.tests.scp.PaymentInfoTests#tearDownClasses</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">demo.tests.scp.PaymentInfoTests#verifyBankPaymentFormFieldsValidation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Possible causes are invalid address of the remote server or browser start-up failure. 
+Host info: host: &apos;USZ78MBH3R&apos;, ip: &apos;192.168.29.240&apos;
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:620)
+	at org.openqa.selenium.remote.RemoteWebDriver.startSession(RemoteWebDriver.java:236)
+	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:163)
+	at org.openqa.selenium.chromium.ChromiumDriver.&lt;init&gt;(ChromiumDriver.java:108)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:88)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:83)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:72)
+	at sew.ai.driver.WebDriverFactory.createChromeDriver(WebDriverFactory.java:173)
+	at sew.ai.driver.WebDriverFactory.instantiateWebDriver(WebDriverFactory.java:52)
+	at sew.ai.driver.DriverFactory.getWebDriver(DriverFactory.java:26)
+	at sew.ai.runner.TestRunner.methodsPreRequisites(TestRunner.java:76)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+Caused by: org.openqa.selenium.WebDriverException: Timed out waiting for driver process to start.
+Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.3&apos;
+Driver info: driver.version: ChromeDriver
+	at org.openqa.selenium.remote.service.DriverService.start(DriverService.java:209)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:119)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
+	... 42 more
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
