--- a/test-output/old/Test Execution/methods.html
+++ b/test-output/old/Test Execution/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Execution</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dac5ef">  <td>24/01/10 17:11:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClasses()[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&lt;&lt;tearDownClasses</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
-<tr bgcolor="86b9e3">  <td>24/01/10 17:08:10</td>   <td>-185698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paymentInfoTests.verifyBankPaymentFormFieldsValidation()[pri:3, instance:demo.tests.scp.paymentInfoTests@3d484181]">verifyBankPaymentFormFieldsValidation</td> 
-  <td>main@653345773</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>24/01/10 17:11:15</td>   <td>-1356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&lt;&lt;tearDownMethods</td> 
-<td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>24/01/10 17:07:49</td>   <td>-207509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;methodsPreRequisites</td> 
-<td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>24/01/10 17:07:49</td>   <td>-207523</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;classPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
-<tr bgcolor="dac5ef">  <td>24/01/10 17:07:47</td>   <td>-208600</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.paymentInfoTests@3d484181]">&gt;&gt;testPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@653345773</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>24/01/19 14:29:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;testPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>24/01/19 14:30:00</td>   <td>21290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
+<tr bgcolor="9b8ea6">  <td>24/01/19 14:30:01</td>   <td>21772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
 </table>
