--- a/test-output/old/Test Execution/methods.html
+++ b/test-output/old/Test Execution/methods.html
@@ -1,10 +1,74 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Execution</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b8ea6">  <td>24/01/19 14:29:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;testPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>24/01/19 14:30:00</td>   <td>21290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;classPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>24/01/19 14:30:01</td>   <td>21772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@a8c1f44]">&gt;&gt;methodsPreRequisites</td> 
-<td>&nbsp;</td>  <td>main@1554877309</td>   <td></td> </tr>
+<tr bgcolor="69fba1">  <td>24/01/30 18:12:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NotificationTests.verifyNotificationsPageNavigationAndUI()[pri:1, instance:demo.tests.scp.NotificationTests@3e587920]">verifyNotificationsPageNavigationAndUI</td> 
+  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PreLoginTests@141e879d]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:09:54</td>   <td>-142728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:37</td>   <td>499583</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.UserDashboardTests@4ba89729]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:33</td>   <td>256198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationPreferenceTests@15fdd1f2]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="92c79a">  <td>24/01/30 18:17:51</td>   <td>333685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NotificationPreferenceTests.verifyAddNotificationChannelFunctionality()[pri:0, instance:demo.tests.scp.NotificationPreferenceTests@15fdd1f2]">verifyAddNotificationChannelFunctionality</td> 
+  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:37</td>   <td>499584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.UserDashboardTests@4ba89729]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PreLoginTests@141e879d]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="b26ea8">  <td>24/01/30 18:10:09</td>   <td>-128026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BillingHistoryTests.verifyBillHistoryUIAndObjects()[pri:2, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">verifyBillHistoryUIAndObjects</td> 
+  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500996</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.AccountInformationTests@5af97169]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:11:30</td>   <td>-47672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:11:29</td>   <td>-47675</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClasses()[pri:0, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">&lt;&lt;tearDownClasses</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:11</td>   <td>473801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.NotificationPreferenceTests@15fdd1f2]">&lt;&lt;tearDownMethods</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PreLoginTests@141e879d]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:13:36</td>   <td>78655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@109d724c]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:37</td>   <td>499584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.UserDashboardTests@4ba89729]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:13:36</td>   <td>78655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500527</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PreLoginTests@141e879d]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500584</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@109d724c]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:37</td>   <td>499584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.UserDashboardTests@4ba89729]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="69fba1">  <td>24/01/30 18:13:48</td>   <td>91209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NotificationTests.verifyReplyNotifications()[pri:1, instance:demo.tests.scp.NotificationTests@3e587920]">verifyReplyNotifications</td> 
+  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:33</td>   <td>256198</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationPreferenceTests@15fdd1f2]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:21</td>   <td>243625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&lt;&lt;tearDownMethods</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.AccountInformationTests@5af97169]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:09:54</td>   <td>-142741</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:33</td>   <td>256196</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownClasses()[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&lt;&lt;tearDownClasses</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.AboutMyHomeTests@1704f67f]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:09:53</td>   <td>-143879</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">&gt;&gt;testPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500468</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.classPreRequisites(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PostLogContactUsTests@1b005a0b]">&gt;&gt;classPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.AboutMyHomeTests@1704f67f]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:11:28</td>   <td>-49162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.BillingHistoryTests@4362d7df]">&lt;&lt;tearDownMethods</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:33</td>   <td>256198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.NotificationPreferenceTests@15fdd1f2]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:16:21</td>   <td>243625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDownMethods(org.testng.ITestResult)[pri:0, instance:demo.tests.scp.NotificationTests@3e587920]">&lt;&lt;tearDownMethods</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
+<tr bgcolor="7a8363">  <td>24/01/30 18:20:38</td>   <td>500468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunner.methodsPreRequisites(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PostLogContactUsTests@1b005a0b]">&gt;&gt;methodsPreRequisites</td> 
+<td>&nbsp;</td>  <td>main@541135648</td>   <td></td> </tr>
 </table>
